--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-
-spring.r2dbc.url=r2dbc:sqlserver://172.17.1.237
-spring.r2dbc.name=PT_STORE
+spring.r2dbc.url=r2dbc:postgres://127.0.0.1
+spring.r2dbc.name=induction
 spring.r2dbc.pool.enabled=true
-spring.r2dbc.username=llg
-spring.r2dbc.password=1111*qqqq
+spring.r2dbc.username=allen
+spring.r2dbc.password=walker
+#
+#spring.r2dbc.url=r2dbc:sqlserver://172.17.1.237
+#spring.r2dbc.name=PT_STORE
+#spring.r2dbc.pool.enabled=true
+#spring.r2dbc.username=llg
+#spring.r2dbc.password=1111*qqqq
