--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+//    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 //    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-    runtimeOnly 'io.r2dbc:r2dbc-mssql'
-//    runtimeOnly 'io.r2dbc:r2dbc-postgresql'
-//    runtimeOnly 'org.postgresql:postgresql'
+//    runtimeOnly 'io.r2dbc:r2dbc-mssql'
+    runtimeOnly 'io.r2dbc:r2dbc-postgresql'
+    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
