--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,5 @@
 version: "3.8"
 services:
-  rabbit:
-    image: rabbitmq:management
-    container_name: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-      - "61613:61613"
-
   postgres:
     image: postgres:alpine
     container_name: postgres
@@ -17,3 +9,15 @@ services:
       - POSTGRES_DB=induction
     ports:
       - "5432:5432"
+  redis:
+   image: redis:alpine
+   container_name: redis
+   ports:
+     - "6379:6379"
+#  rabbit:
+#    image: rabbitmq:management
+#    container_name: rabbitmq
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#      - "61613:61613"
