--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,15 @@ services:
       - POSTGRES_DB=induction
     ports:
       - "5432:5432"
-  redis:
-   image: redis:alpine
-   container_name: redis
-   ports:
-     - "6379:6379"
-#  rabbit:
-#    image: rabbitmq:management
-#    container_name: rabbitmq
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
-#      - "61613:61613"
+#  redis:
+#   image: redis:alpine
+#   container_name: redis
+#   ports:
+#     - "6379:6379"
+  rabbit:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+      - "61613:61613"
