--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - POSTGRES_DB=col
     ports:
       - "5432:5432"
-#  redis:
-#   image: redis:alpine
-#   container_name: redis
-#   ports:
-#     - "6379:6379"
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
   rabbit:
     image: rabbitmq:management
     container_name: rabbitmq
