rename database name to col

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.r2dbc.url=r2dbc:postgres://127.0.0.1
-spring.r2dbc.name=induction
+spring.r2dbc.name=col
 spring.r2dbc.pool.enabled=true
 spring.r2dbc.username=allen
 spring.r2dbc.password=walker
