--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.r2dbc.pool.enabled=true
 spring.r2dbc.username=allen
 spring.r2dbc.password=walker
 
+jwt.password.secret=walker
+jwt.password.iteration=10000
+jwt.password.keylength=128
+
 #spring.r2dbc.url=r2dbc:sqlserver://172.17.1.237
 #spring.r2dbc.name=PT_STORE
 #spring.r2dbc.pool.enabled=true
